<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where\'d my Money go?</string>
    <string name="catAct_name">Categories</string>
    <string name="catEditAct_name">Edit Catgeory</string>
    <string name="souAct_name">Sources</string>
    <string name="souEditAct_name">Edit Source</string>
    <string name="action_categories">Categories</string>
    <string name="action_sources">Sources</string>
    <string name="action_backup">Backup to Email</string>
    <string name="action_reset">Reset App</string>
    <string name="title_expensetab">Expense</string>
    <string name="title_incometab">Income</string>
    <string name="title_expvsinctab">Exp vs Inc</string>
    <string name="expAddAct_name">Add Expense</string>
    <string name="expEditAct_name">Edit Expense</string>
    <string name="incAddAct_name">Add Income</string>
    <string name="incEditAct_name">Edit Income</string>
    <string name="optionsAct_name">Select Options:</string>
    <string name="alarmAct_name">Alarm</string>
    <string name="expAlarmAct_name">Expense Alarm</string>
    <string name="incAlarmAct_name">Income Alarm</string>
    <string name="cashflow_name">Name :</string>
    <string name="cashflow_currency">Currency :</string>
    <string name="cashflow_amount">Amount :</string>
    <string name="cashflow_category">Category :</string>
    <string name="cashflow_date">Date :</string>
    <string name="cashflow_freq">Frequency :</string>
    <string name="cashflow_notify">Ask before adding the recurrence?</string>
    <string name="options_sort">Sort :</string> 
    <string name="options_filter">Filter by Category :</string> 
    <string name="options_home_cur">View in home currency :</string> 
    <string name="options_rec">View only Recurrences :</string> 
    <string name="options_date">Filter by Date :</string> 
    <string name="options_all">All :</string> 
    <string name="options_date_range">Date Range:</string> 
    <string name="options_from">From :</string> 
    <string name="options_to">To :</string> 
    <string name="options_save">Save</string> 
    <string name="options_cancel">Cancel</string> 
    <string name="category_name">Category Name:</string>  
    
    <string-array  name="listview_menu">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    
    <string-array  name="sort_spinner_items">
        <item>Date - Newest First</item>
        <item>Date - Oldest First</item>
        <item>Amount - Highest First</item>
        <item>Amount - Lowest First</item>
    </string-array>
    
    <string-array  name="frequency_spinner_items">
        <item>Do not repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
  

</resources>
