<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:paddingLeft="10dp" 
    android:paddingRight="10dp" > 

    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:gravity="right"
        android:orientation="horizontal" >

       <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_accept"
         />
        
        <ImageButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_cancel"
        android:layout_marginLeft="5dp"
        />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

       <TextView
           android:id="@+id/nameLabel"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="3.34"
           android:text="@string/cashflow_name"
           android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" >
            
             <requestFocus />

        </EditText>

    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

       <TextView
        android:id="@+id/expenseCurrencyLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3.34"
        android:text="@string/cashflow_currency"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
         <Spinner
             android:id="@+id/inputCurrency"
             android:layout_width="180dp"
             android:layout_height="wrap_content" />
        
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

       <TextView
        android:id="@+id/expenseAmountLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3.34"
        android:text="@string/cashflow_amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/inputAmount"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1" >

        </EditText>
        
    </LinearLayout>
    
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

       <TextView
        android:id="@+id/expenseDateLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3.34"
        android:text="@string/cashflow_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
       
        <Button
        android:id="@+id/pickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_action_calendar"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:onClick="showDatePickerDialog" /> 
        
    </LinearLayout>
     
    

     
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

       <TextView
        android:id="@+id/catLabel"
        android:layout_width="0dp" 
        android:layout_height="wrap_content" 	
        android:layout_weight="3.34" 
        android:text="@string/cashflow_category"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
          <Spinner
              android:id="@+id/category1"
              android:layout_width="183dp"
              android:layout_height="wrap_content" />

    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

       <TextView
        android:id="@+id/freqLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3.34" 
        android:text="@string/cashflow_freq"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
          <Spinner
              android:id="@+id/inputFreq"
              android:layout_width="183dp"
              android:layout_height="wrap_content" />

    </LinearLayout>
     <CheckBox
         android:id="@+id/inputNotify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/cashflow_notify"
         android:textAppearance="?android:attr/textAppearanceMedium" /> 

</LinearLayout>